20231025 update